--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -3,3 +3,9 @@
     color: black;
     /* font-variant: small-caps; */
 }
+
+.footer{
+    background-color: rgba(60, 69, 67, 0.6);
+    border-radius: 15px;
+    height: 6em;
+}
