--- a/src/components/Main/Contact/contact.module.css
+++ b/src/components/Main/Contact/contact.module.css
@@ -35,6 +35,7 @@ option{
 
 textarea{
     border: 2px solid goldenrod;
+    border-radius: 15px;
 }
 
 input::placeholder, textarea::placeholder, select{
