--- a/src/components/Main/FarGalaxy/farGalaxy.module.css
+++ b/src/components/Main/FarGalaxy/farGalaxy.module.css
@@ -3,4 +3,16 @@
     letter-spacing: 0.2em;
     line-height: 1.6;
     text-align: justify;
+    animation-name: intro;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+}
+
+@keyframes intro{
+    0%{
+        margin-top: 300px;
+    }
+    100%{
+        margin-top: 0;
+    }
 }
